--- a/app/src/main/res/layout/activity_manage_member.xml
+++ b/app/src/main/res/layout/activity_manage_member.xml
@@ -66,22 +66,47 @@
                     android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_member_phone"
+            <LinearLayout
+                android:id="@+id/ll_member_phone"
                 android:layout_width="match_parent"
-                android:layout_marginTop="16dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/til_member_name">
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/til_member_name"
+                android:orientation="horizontal">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_member_phone"
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/nomor_hp"
-                    android:importantForAutofill="no"
-                    android:inputType="phone" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="3"
+                    app:boxStrokeColor="@color/stroke_color">
+
+                    <EditText
+                        android:id="@+id/et_member_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Nomor HP"
+                        android:inputType="phone"
+                        android:singleLine="true" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <Button
+                    android:id="@+id/bt_select_contact"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/white"
+                    android:drawableStart="@drawable/ic_add_location_black_24dp"
+                    android:drawableTint="@color/colorAccent"
+                    android:foregroundTint="@color/colorAccent"
+                    android:src="@drawable/ic_add_location_black_24dp"
+                    android:text="Pilih Kontak"
+                    android:textColor="@color/colorAccent" />
+
+            </LinearLayout>
             <Button
                 android:id="@+id/bt_input_member"
                 android:layout_width="wrap_content"
@@ -98,7 +123,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/til_member_phone" />
+                app:layout_constraintTop_toBottomOf="@id/ll_member_phone" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
